panelview.cpp: Move setPosition to resizePanel

Avoids a race condition where panel size is wrong when setting the
position of panel, which causes wrong sizes with fit-content panels

BUG:487310